clippy fix

--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,3 @@
-body {
-  font-family: 'IBM Plex Sans', sans-serif;
-}
-
 img {
     max-height: 400px;
     max-width: 400px;
